Bug 1217218 - Consolidate shutdown of nsPerformanceStatsService. r=froydnj